test/pass/call_piping/pipe_to_class_func.lly
class example {
    var @data: list[integer] = []
    define add(v: integer) {
        @data.append(v)
    }

    10 |> add
}
